--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<version>1.0</version>
 	<name>Spring Boot Web FreeMarker Sample</name>
 	<description>Spring Boot Web FreeMarker Sample</description>
+	<url>http://maven.apache.org</url>
 	<organization>
 		<name>Pivotal Software, Inc.</name>
 		<url>http://www.spring.io</url>
@@ -28,6 +29,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.0</version>
 		</dependency>
 		<!-- Test -->
 		<dependency>
